--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@ table {
 }
 
 td {
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
+    width: 75px;
+    height: 75px;
+    border: 1px;
+    border-style: solid;
+    border-color: black;
     text-align: center;
     vertical-align: middle;
 }
